--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "morgan": "^1.9.1",
     "node-fetch": "^2.6.0",
-    "vue-router": "^3.1.2"
+    "vue-router": "^3.1.2",
+    "vue-toasted": "^1.1.27"
   }
 }
